<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">User Interface</string>
    <string name="general_ui">General UI</string>
    <string name="quick_launch">Quick Launch Apps</string>
    <string name="quick_launch_summary">Statusbar Application Quick Launch</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Power saver</string>
    <string name="led_options">LED options</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Tools</string>
    <string name="weather">Weather</string>
    <string name="signal">Signal</string>
    <string name="propmodder_title">Build Properties</string>
    <string name="header_summary_battery">Battery icon style (icon, text, circle)</string>
    <string name="header_summary_general_ui">Boot animation, bug mailer, rotation, IME switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom apps to launch, layout</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_powersaver">Automatically disable data to save battery</string>
    <string name="header_summary_led">Change default settings for Android to use</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
	<string name="header_summary_clock">Clock location, AM/PM style, color</string>
	<string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
	<string name="header_summary_signal">Signal dBm text</string>
	<string name="header_summary_propmodder">Modify build.prop settings</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation bar color</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_summary">Adjust how fast your buttons animate after you touch them. Lowering the speed can improve performance.</string>
    <string name="rotation_animation_delay_title">Rotation delay</string>
    <string name="rotation_animation_delay_summary">The number of milliseconds for which the device posture must be stable before an orientation change occurs. 200 ms default.</string>
	<string name="ime_switcher_title">Show IME Switcher</string>
	<string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
	<string name="custom_carrier_label_title">Custom carrier label</string>
	<string name="longpress_to_kill_title">Hold back to kill</string>
	<string name="longpress_to_kill_summary">Holding back will kill the current activity</string>
	<string name="rotate_180_title">Allow 180° rotation</string>
	<string name="rotate_180_summary">Allow your device to rotate upside down!</string>
	<string name="horizontal_recents_task_panel_title">Horizontal recents window</string>
	<string name="horizontal_recents_task_panel_summary">Use WebOS style task switcher. Your UI will restart after changing this. It will come back in about 10 seconds. If it doesn\'t, just reboot the phone from the power menu.</string>
	<string name="disable_bootanimation_title">Disable boot animation</string>
	<string name="disable_bootanimation_summary">Jerk.</string>
	<string name="disable_bugmailer_title">Disable bugmailer</string>
	<string name="lcd_density_title">LCD Density</string>
	<string name="lcd_density_summary">unknown</string>
	<string name="crt_animations_header">CRT animations</string>
	<string name="crt_on_title">CRT on animation</string>
	<string name="crt_off_title">CRT off animation</string>
	<string name="lcd_density_wizard">LCD Density Wizard</string>
	<string name="follow_through_title">Follow through!</string>
	<string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before proceeding to the next.</string>
	<string name="stock_density_title">1. Change LCD Density to stock value</string>
	<string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by default.</string>
	<string name="reboot_title">2. Reboot!</string>
	<string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
	<string name="clear_market_data_title">3. Clear market data</string>
	<string name="clear_market_data_cleared">Market data cleared</string>
	<string name="open_market_title">4. Open Market and hit accept</string>
	<string name="open_market_summary">Press back when done to return here.</string>
	<string name="custom_density_title">5. Change density to whatever you like!</string>
	<string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here and repeat the process.</string>
    <string name="pref_lockscreen_layout_title">Lockscreen style</string>
    <string name="pref_lockscreen_layout_summary">Remember to scroll down and change your targets after changing styles</string>
    <string name="title_pref_lockscreen_quad_targets">Quad Targets</string>
    <string name="summary_pref_lockscreen_quad_targets">Adds Phone and Messaging shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_octo_targets">Octo Targets</string>
    <string name="summary_pref_lockscreen_octo_targets">Adds too many shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_menu_unlock">Menu unlock</string>
    <string name="summary_pref_lockscreen_menu_unlock">Legacy menu icon unlocks screen (requires reboot)</string>
    <string name="title_lockscreen_user_timeout_override">Wait to lock screen</string>
    <string name="summary_lockscreen_user_timeout_override">Use Android\'s timeout setting after you manually turn the screen off. The default behavior is to use the delay only when the screen times out by itself.</string>
    <string name="lockscreen_battery_title">Lockscreen Battery Percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
	<string name="lockscreen_weather_title">Lockscreen Weather</string>
    <string name="lockscreen_weather_summary">Show Weather Information on Lockscreen. You need to enable ROMControl\'s Weather service to use this</string>
    <string name="volume_wake_title">Volume wake</string>
    <string name="volume_wake_summary">Tapping the volume keys while your phone is off will turn the screen on.</string>
    <string name="volume_music_controls_title">Volume music controls</string>
    <string name="volume_music_controls_summary">Long press volume buttons to skip tracks while screen is off. Volume wake will not work when music is playing.</string>
    <string name="lockscreen_show_nav_title">Hide nav bar</string>
    <string name="lockscreen_show_nav_summary">Hide the nav bar (if your device supports it) on the lockscreen.</string>
    <string name="custom_app_n_dialog_title">Choose action for target %1$s</string>
    <string name="custom_app_n">Custom app %1$s</string>
    <string name="lockscreen_targets">Lockscreen targets</string>
    <string name="lockscreen_action_unlock">Unlock</string>
    <string name="lockscreen_action_sound">Sound toggle</string>
    <string name="lockscreen_action_camera">Camera</string>
    <string name="lockscreen_action_mms">SMS</string>
    <string name="title_show_power_menu">Show power menu</string>
    <string name="title_show_reboot_menu">Show reboot menu</string>
    <string name="title_show_profiles_menu">Show profiles menu</string>
    <string name="title_show_screenshot">Show screenshot</string>
    <string name="title_show_airplane_mode">Show airplane mode</string>
    <string name="title_show_torch_toggle">Show torch toggle</string>
    <string name="title_show_navbar_hide">Show navigation bar toggle</string>
	<string name="pt_performance">Performance</string>
	<string name="pt_init_d">Start-up Tweaks</string>
	<string name="ps_performance">Set CPU, free memory &amp; customize start-up
		settings.</string>
	<string name="ps_init_d">Configure tweaks that are run at boot
		(init.d)
	</string>
	<string name="donate_teamdrh">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=U86AKQBLLDENQ&amp;lc=US&amp;item_name=TeamDRH ICS</string>
	<string name="donate_ch3vr0n5">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=J99R4M5KZ5FWJ</string>
	<string name="donate_fosser2">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=KAGXDNVPTUCE4</string>
	<string name="donate_mayday_jay">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=2R6XKB6UWBRFY&amp;lc=CA&amp;item_name=mayday_jay - Android ROM/Kernel Developer - Beer Fund</string>
	<string name="donate_the3Dman">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=the3dman@the3dman.org&amp;lc=US&amp;item_name=TeamDRH-The3DmaN</string>
	<string name="donate_plastikman">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=plastikman@gmail.com&amp;lc=US&amp;item_name=TeamDRH-plastikman</string>
	<string name="donate_treznorx">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XR4XSDVK9YZLU</string>
	<string name="donate_tlb1961">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=292VZ7WN435GU&amp;lc=US&amp;item_name=TeamDRH-tlb1961</string>
	<string name="devs">Developers</string>
	<string name="teamdrh">TeamDRH</string>
	<string name="teamdrh_website_title">TeamDRH Website</string>
	<string name="teamdrh_website_summary">www.teamdrh.com - Find all newest releases here.</string>
	<string name="teamdrh_source_title">TeamDRH Source</string>
	<string name="teamdrh_source_summary">TeamDRH is fully open source. You can always check out the latest source at github.com/TeamDRH</string>
    <string name="teamdrh_irc_title">Join us on IRC</string>
    <string name="teamdrh_irc_summary">#gtab-kerneldev @ irc.freenode.net</string>
    <string name="about_teamdrh">About TeamDRH</string>
    <string name="about_teamdrh_summary">@null</string>
    <string name="drh_interface_settings">Interface Settings</string>
    <string name="drh_interface_settings_summary">Status Bar Widget Settings and Toggles</string>
    <string name="drh_lockscreen_actions">Lockscreen actions</string>
</resources>