<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

	<header
		android:id="@+id/about"
		android:fragment="com.teamdrh.control.fragments.About"
		android:title="@string/about_teamdrh"
		android:summary="@string/about_teamdrh_summary" />

	<header android:title="@string/tools" />

	<header
		android:id="@+id/lockscreens"
		android:title="@string/drh_lockscreen_actions"
		android:summary="@string/lockscreen_options"
		android:fragment="com.teamdrh.control.fragments.LockscreenActions"
		android:icon="@drawable/ic_rom_control_lockscreens" />

	<header
		android:id="@+id/quick_launch"
		android:title="@string/quick_launch"
		android:summary="@string/quick_launch_summary"
		android:fragment="com.teamdrh.control.fragments.QuickLaunchActions"
		android:icon="@drawable/ic_rom_control_general" />

    <header
        android:id="@+id/drh_interface_settings"
        android:fragment="com.teamdrh.control.fragments.InterfaceSettings"
        android:icon="@drawable/drh_interface"
        android:title="@string/drh_interface_settings"
        android:summary="@string/drh_interface_settings_summary" />

	<header
		android:id="@+id/power_menu"
		android:fragment="com.teamdrh.control.fragments.PowerMenu"
		android:title="@string/power_menu_optons"
		android:icon="@drawable/ic_rom_control_power_menu"
		android:summary="@string/header_summary_power_menu" />

	<header
		android:id="@+id/statusbar_battery"
		android:title="@string/battery"
		android:fragment="com.teamdrh.control.fragments.StatusBarBattery"
		android:icon="@drawable/ic_rom_control_battery"
		android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/propmodder"
        android:title="@string/propmodder_title"
        android:icon="@drawable/ic_rom_control_propmodder"
        android:fragment="com.teamdrh.control.fragments.PropModder"
        android:summary="@string/header_summary_propmodder" />

    <header
        android:id="@+id/init_d"
        android:title="@string/pt_init_d"
        android:icon="@drawable/ic_rom_control_init_d"
        android:fragment="com.teamdrh.control.fragments.InitD"
        android:summary="@string/ps_init_d" />

	<header
		android:id="@+id/performance"
		android:title="@string/pt_performance"
		android:summary="@string/ps_performance"
		android:fragment="com.teamdrh.control.fragments.Performance"
		android:icon="@drawable/ic_rom_control_performance" />

</preference-headers>
