<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:aokp="http://schemas.android.com/apk/res/com.teamdrh.control">

	<PreferenceCategory
		android:key="teamdrh"
		android:title="@string/teamdrh">

		<Preference
			android:key="teamdrh_website"
			android:title="@string/teamdrh_website_title"
			android:summary="@string/teamdrh_website_summary" />

		<Preference
			android:key="teamdrh_source"
			android:title="@string/teamdrh_source_title"
			android:summary="@string/teamdrh_source_summary" />

		<Preference
			android:key="teamdrh_irc"
			android:title="@string/teamdrh_irc_title"
			android:summary="@string/teamdrh_irc_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="TeamDRH Donation"
			aokp:donateLink="@string/donate_teamdrh" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="ch3vr0n5"
			aokp:donateLink="@string/donate_ch3vr0n5" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="fosser2"
			aokp:twitterHandle="105866349950326120154"
			aokp:donateLink="@string/donate_fosser2" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="mayday_jay"
			aokp:twitterHandle="106963595789076860664"
			aokp:donateLink="@string/donate_mayday_jay" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="the3Dman"
			aokp:twitterHandle="117124754281343579829"
			aokp:donateLink="@string/donate_the3Dman" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="plastikman"
			aokp:twitterHandle="107073236275143074560"
			aokp:donateLink="@string/donate_plastikman" />

		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="treznorx"
			aokp:twitterHandle="102414366483095111621"
			aokp:donateLink="@string/donate_treznorx" />
			
		<com.teamdrh.control.widgets.DeveloperPreference
			android:title="tlb1961"
			aokp:donateLink="@string/donate_tlb1961" />
	</PreferenceCategory>

</PreferenceScreen>
