<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference android:key="show_power_menu"
		android:title="@string/title_show_power_menu" />

	<CheckBoxPreference android:key="show_reboot_menu"
		android:title="@string/title_show_reboot_menu" />

	<CheckBoxPreference android:key="show_profiles_menu"
		android:title="@string/title_show_profiles_menu" />

	<CheckBoxPreference android:key="show_screenshot"
		android:title="@string/title_show_screenshot" />

	<CheckBoxPreference android:key="show_torch_toggle"
		android:title="@string/title_show_torch_toggle" />
    
    <CheckBoxPreference android:key="show_airplane_mode"
		android:title="@string/title_show_airplane_mode" />

    <CheckBoxPreference android:key="show_navbar_hide"
		android:title="@string/title_show_navbar_hide" />

</PreferenceScreen>
